<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_app_gradient">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:navigationIcon="@android:drawable/ic_media_previous"
            android:title="@string/my_tickets"
            android:subtitle="@string/toolbar_tickets_subtitle" />

        <TextView
            android:id="@+id/txtStateMessage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/space_20"
            android:layout_marginTop="@dimen/space_8"
            android:text="@string/loading_tickets"
            android:textColor="@color/color_text_secondary" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerTickets"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:clipToPadding="false"
            android:padding="@dimen/space_20"
            tools:listitem="@layout/item_ticket" />

        <LinearLayout
            android:id="@+id/layoutEmpty"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/space_20"
            android:background="@drawable/bg_surface_card"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="@dimen/space_24"
            android:visibility="gone">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/empty_tickets_title"
                android:textColor="@color/color_text_primary"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/space_8"
                android:gravity="center"
                android:text="@string/empty_tickets_message"
                android:textColor="@color/color_text_secondary" />
        </LinearLayout>
    </LinearLayout>

    <FrameLayout
        android:id="@+id/loadingOverlay"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/color_overlay"
        android:visibility="gone">

        <com.google.android.material.progressindicator.CircularProgressIndicator
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            app:indicatorColor="@color/color_secondary" />
    </FrameLayout>
</FrameLayout>
